--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!--Play and Pause button-->
+    <!--Play and Pause script button-->
     <script src="js/scripts.js"></script>
     
 
